Align TypeScript package scope

--- a/bindings/ts/package.json
+++ b/bindings/ts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@alnp/bindings",
+  "name": "@alpine-core/bindings",
   "version": "1.0.0",
   "description": "TypeScript bindings for the Authenticated Lighting Network Protocol.",
   "main": "dist/index.js",
