--- a/src/alnp/Cargo.toml
+++ b/src/alnp/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "alpine"
-version = "1.0.5"
+name = "alpine-core"
+version = "1.0.6"
 edition = "2021"
 description = "Authenticated Lighting Protocol (alpine): secure control-plane + streaming guard for lighting data."
 license = "Apache-2.0"
