--- a/src/alnp/Cargo.toml
+++ b/src/alnp/Cargo.toml
@@ -7,6 +7,7 @@ license = "Apache-2.0"
 publish = ["crates-io", "github"]
 
 [lib]
+name = "alpine"
 crate-type = ["rlib", "staticlib"]
 
 [dependencies]
