chore(ci): update SDK TypeScript workflow to modify pnpm install flag

--- a/.github/workflows/sdk-ts-publish.yml
+++ b/.github/workflows/sdk-ts-publish.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd sdk/ts
-          pnpm install --frozen-lockfile
+          pnpm install --no-frozen-lockfile
 
       - name: Type-check
         run: |
