--- a/.github/workflows/sdk-python-publish.yml
+++ b/.github/workflows/sdk-python-publish.yml
@@ -7,29 +7,42 @@ on:
     types:
       - completed
 
+  workflow_dispatch:
+
 jobs:
   python-sdk:
-    if: github.event.workflow_run.conclusion == 'success'
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      id-token: write   # ✅ REQUIRED for PyPI Trusted Publisher (OIDC)
+
+    if: |
+      github.event_name == 'workflow_dispatch' ||
+      (github.event_name == 'workflow_run' &&
+       github.event.workflow_run.conclusion == 'success')
+
     steps:
+      # ✅ Checkout the SAME commit that triggered Protocol Publish
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.workflow_run.head_sha || github.ref }}
+
       - uses: actions/setup-python@v5
         with:
           python-version: "3.12"
+
       - name: Install build tooling
-        run: python -m pip install --upgrade pip build twine
+        run: |
+          python -m pip install --upgrade pip build twine
+
       - name: Build Python SDK
         run: |
           cd sdk/python
           python -m build
+
+      # ✅ Publish via OIDC (NO TOKENS)
       - name: Publish Python SDK
-        if: |
-          github.event_name == 'workflow_dispatch' ||
-          (github.event_name == 'workflow_run' &&
-           github.event.workflow_run.conclusion == 'success')
-        env:
-          TWINE_USERNAME: "__token__"
-          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
         run: |
           cd sdk/python
-          python -m twine upload --non-interactive dist/*
+          twine upload dist/*
