--- a/sdk/rust/Cargo.toml
+++ b/sdk/rust/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["alpine-core"]
 license = "Apache-2.0"
 
 [dependencies]
-alpine_protocol_rs = "2.0.16"
+alpine-protocol-rs = "2.0.16"
 rand = "0.8"
 serde_cbor = "0.11"
 serde_json = "1.0"
